# pedal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: getCPM.cmake  tools.cmake  warnings.cmake
cmake/optimization_flags/: lto.cmake  polyhedral.cmake
standalone/source/: main.cpp
